--- a/app/views/urls/index.html.erb
+++ b/app/views/urls/index.html.erb
@@ -15,7 +15,7 @@
       <th>Url</th>
       <th>Short url</th>
       <th>Visits</th>
-      <th colspan="3"></th>
+      <th>Title</th>
     </tr>
   </thead>
 
@@ -25,8 +25,7 @@
         <td><%= url.url %></td>
         <td><%= url.short_url %></td>
         <td><%= url.visits %></td>
-        <td><%= link_to 'Show', url %></td>
-        <td><%= link_to 'Destroy', url, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= url.title %></td>
       </tr>
     <% end %>
   </tbody>
